--- a/app/zipextractor/build.gradle
+++ b/app/zipextractor/build.gradle
@@ -6,14 +6,15 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    namespace 'com.kacera.zipextractor'
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.kacera.zipextractor"
         minSdk 26
-        targetSdk 31
-        versionCode 4
-        versionName "1.1"
+        targetSdk 34
+        versionCode 5
+        versionName "1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
